--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <title>Restoral</title>
     <meta name="description" content="Le bon resto">
+    <link rel="stylesheet" href="assets/css/Reset.css">
     <link rel="stylesheet" href="assets/css/header.css">
 </head>
 <body>
+    <header class="centerBloc">
+        <div id="headerContainer" class="centerBloc">
+            <div class="headerEnds centerBloc">
+                <a href="Index.html" class="centerBloc"><img src="assets/images/logo-280x60.png" alt="" class="img"></a>
+            </div>
+            <nav class="centerBloc">
+                <ul class="centerBloc">
+                    <li><a href="">HOME</a></li>
+                    <li class="dot"><a href="">ABOUT US</a></li>
+                    <li class="dot"><a href="">MENU</a></li>
+                    <li class="dot"><a href="">PAGES</a></li>
+                    <li class="dot"><a href="">NEWS</a></li>
+                    <li class="dot"><a href="">CONTACTS</a></li>
+                </ul>
+            </nav>
+            <div class="headerEnds centerBloc" id="numero">
+                <a href="" class="flex">
+                    <img src="" alt="">
+                    <h3>+1 (409) 987-5874</h3>
+                </a>
+            </div>
+        </div>
+    </header>
+
+
+    <footer>
+        <section id="footerUp"></section>
+        <section id="footerDown"></section>
+    </footer>
     
 </body>
 </html>
