Accueil.css ajouté

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,9 @@
     <title>Restoral</title>
     <meta name="description" content="Le bon resto">
     <link rel="stylesheet" href="assets/css/Reset.css">
+    <link rel="stylesheet" href="assets/css/Accueil.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 <body>
     <header class="centerBloc">
@@ -15,7 +17,7 @@
             </div>
             <nav class="centerBloc">
                 <ul class="centerBloc">
-                    <li><a href="">HOME</a></li>
+                    <li id="home"><a href="">HOME</a></li>
                     <li class="dot"><a href="">ABOUT US</a></li>
                     <li class="dot"><a href="">MENU</a></li>
                     <li class="dot"><a href="">PAGES</a></li>
