--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <title>Restoral</title>
     <meta name="description" content="Le bon resto">
     <link rel="stylesheet" href="assets/css/Reset.css">
+    <link rel="stylesheet" href="assets/css/accueil.css">
     <link rel="stylesheet" href="assets/css/header.css">
 </head>
 <body>
