--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/Reset.css">
     <link rel="stylesheet" href="assets/css/accueil.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 <body>
     <header class="centerBloc">
@@ -16,7 +17,7 @@
             </div>
             <nav class="centerBloc">
                 <ul class="centerBloc">
-                    <li><a href="">HOME</a></li>
+                    <li><a href="" id="home">HOME</a></li>
                     <li class="dot"><a href="">ABOUT US</a></li>
                     <li class="dot"><a href="">MENU</a></li>
                     <li class="dot"><a href="">PAGES</a></li>
@@ -35,8 +36,74 @@
 
 
     <footer>
-        <section id="footerUp"></section>
-        <section id="footerDown"></section>
+        <section id="footerUp" class="centerBloc">
+            <div id="up" class="footerContainer centerBloc">
+                <section class="footerTiles" id="leftTile">
+                    <div class="segment">
+                        <div id="restoral"><img src="assets/images/logo-inverse-280x60.png" alt="" class="footerImg"></div>
+                        <div id="restoralDesc"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur perferendis blablalbalbalbabla blablalbalbalbabla blablalbalbalbabla</p></div>
+                    </div>
+                    <div class="segment">
+                        <div class="contacts flex"><h3>Address:</h3><p> 267 Park Avenue New York, NY 90210</p></div>
+                        <div class="contacts flex"><h3>Email: </h3><p>info@demolink.org</p></div>
+                        <div class="contacts flex"><h3>Phone:</h3><p> 1-800-1234-567</p></div>
+                    </div>
+                </section>
+                <section class="footerTiles" id="middleTile">
+                    <div class="segment">
+                        <div class="menu centerBloc"><h2>OUR MENU</h2></div>
+                        <div id="menuList">
+                            <p><a href="">BURGERS</a>  /  <a href="">PIZZAS</a>  /  <a href="">TOASTS</a>  /  <a href="">SALADS</a>  /  </br> <a href="">DRINKS</a>  /  <a href="">DESSERTS</a></p>
+                        </div>
+                    </div>
+                    <div class="segment" style="margin-top: 30px;">
+                        <div id="opening">
+                            <h2>OPENING HOURS</h2>
+                        </div>
+                        <div id="hours">
+                            <img src="" alt="">
+                            <p>9:00am-7:00pm</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="footerTiles" id="rightTile">
+                    <div class="segment">
+                        <div class="menu centerBloc"><h2>NEWSLETTER</h2></div>
+                        <div id="news" class="centerBloc">
+                            <input type="email" id="email" placeholder="Your Email">
+                            <button id="sub">Subscribe</button>
+                        </div>
+                    </div>
+                    <div class="segment" style="margin-top: 30px;">
+                        <div id="follow">
+                            <h2>FOLLOW US</h2>
+                        </div>
+                        <div id="followMedia" class="centerBloc">
+                            <div class="media"><a href=""><img src="assets/images/instagram.svg" alt="Instagram" class="footerImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/facebook.svg" alt="Facebook" class="footerImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/twitter.svg" alt="Twitter" class="footerImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/google.svg" alt="Google+" class="footerImg"></a></div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </section>
+        <section id="footerDown" class="centerBloc">
+            <div id="down" class="footerContainer flex">
+                <div id="downLeft" class="centerBloc">
+                    <p>Restoral ©2023</p>
+                    <a href="">Privacy Policy</a>
+                    <p>. Design by </p>
+                    <a href="">Restoral</a>
+                </div>
+                <div id="downRight" class="centerBloc">
+                    <div class="icons"><a href=""><img src="assets/images/instagram.svg" alt="Instagram" class="footerImg"></a></div>
+                    <div class="icons"><a href=""><img src="assets/images/facebook.svg" alt="Facebook" class="footerImg"></a></div>
+                    <div class="icons"><a href=""><img src="assets/images/twitter.svg" alt="Twitter" class="footerImg"></a></div>
+                    <div class="icons"><a href=""><img src="assets/images/google.svg" alt="Google+" class="footerImg"></a></div>
+                </div>
+            </div>
+        </section>
     </footer>
     
 </body>
