--- a/Index.html
+++ b/Index.html
@@ -34,6 +34,22 @@
         </div>
     </header>
 
+    <main>
+        <section id="carousel"></section>
+        <section id="aboutRestoral"></section>
+        <section id="valeurs"></section>
+        <section id="carte"></section>
+        <section id="orderOnline"></section>
+        <section id="ourChefs"></section>
+        <section id="ourPartners"></section>
+        <section id="gallery" class="flex">
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
+            <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
+        </section>
+        <section id="ourTestimonials"></section>
+    </main>
 
     <footer>
         <section id="footerUp" class="centerBloc">
