Main Partners et Valeurs ok

--- a/Index.html
+++ b/Index.html
@@ -36,19 +36,105 @@
 
     <main>
         <section id="carousel"></section>
+
         <section id="aboutRestoral"></section>
-        <section id="valeurs"></section>
-        <section id="carte"></section>
+
+        <section id="valeurs" class="centerBloc">
+            <div id="valeurContainer" class="mainContainer centerBloc">
+                <div class="valeur">
+                    <div class="valeursIcon mainImg">
+                        <img src="" alt="">
+                    </div>
+                    <div class="valeursTitle centerBloc">
+                        <h3>FAST DELIVERY</h3>
+                    </div>
+                    <div class="valeursBar flex">
+                        <img src="assets/images/divider.svg" alt="" class="divider">
+                    </div>
+                    <div class="valeursText centerText">
+                        <p>Everything you order at Restoral will be quickly delivered to your door.</p>
+                    </div>
+                </div>
+                <div class="valeur">
+                    <div class="valeursIcon mainImg">
+                        <img src="" alt="">
+                    </div>
+                    <div class="valeursTitle centerBloc">
+                        <h3>FAST DELIVERY</h3>
+                    </div>
+                    <div class="valeursBar flex">
+                        <img src="assets/images/divider.svg" alt="" class="divider">
+                    </div>
+                    <div class="valeursText centerText">
+                        <p>Everything you order at Restoral will be quickly delivered to your door.</p>
+                    </div>
+                </div>
+                <div class="valeur">
+                    <div class="valeursIcon mainImg">
+                        <img src="" alt="">
+                    </div>
+                    <div class="valeursTitle centerBloc">
+                        <h3>FAST DELIVERY</h3>
+                    </div>
+                    <div class="valeursBar flex">
+                        <img src="assets/images/divider.svg" alt="" class="divider">
+                    </div>
+                    <div class="valeursText centerText">
+                        <p>Everything you order at Restoral will be quickly delivered to your door.</p>
+                    </div>
+                </div>
+                <div class="valeur">
+                    <div class="valeursIcon mainImg">
+                        <img src="" alt="">
+                    </div>
+                    <div class="valeursTitle centerBloc">
+                        <h3>FAST DELIVERY</h3>
+                    </div>
+                    <div class="valeursBar flex">
+                        <img src="assets/images/divider.svg" alt="" class="divider">
+                    </div>
+                    <div class="valeursText centerText">
+                        <p>Everything you order at Restoral will be quickly delivered to your door.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="carte" class="centerBloc">
+            <div class="mainContainer"></div>
+        </section>
+
         <section id="orderOnline"></section>
-        <section id="ourChefs"></section>
-        <section id="ourPartners"></section>
+
+        <section id="ourChefs" class="centerBloc">
+            <div class="mainContainer"></div>
+        </section>
+
+        <section id="ourPartners" class="centerBloc">
+            <div class="mainContainer">
+                <div id="partner">
+                    <h2>Our Partners</h2>
+                    <p>We are glad to offer our visitor high-quality burger and pizzas, but we also believe our </br> whole business couldn't be successful without our parners.</p>
+                </div>
+                <div id="partnerLogos" class="centerBloc">
+                    <div class="partners"><a href=""><img src="assets/images/brand-1-128x111.png" alt="" class="mainImg"></a></div>
+                    <div class="partners"><a href=""><img src="assets/images/brand-2-129x102.png" alt="" class="mainImg"></a></div>
+                    <div class="partners"><a href=""><img src="assets/images/brand-3-143x110.png" alt="" class="mainImg"></a></div>
+                    <div class="partners"><a href=""><img src="assets/images/brand-4-142x102.png" alt="" class="mainImg"></a></div>
+                </div>
+            </div>
+        </section>
+
         <section id="gallery" class="flex">
             <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
             <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
             <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
             <div class="gallery"><img src="assets/images/index-gallery-1-480x394.jpg" alt="" class="mainImg"></div>
         </section>
-        <section id="ourTestimonials"></section>
+
+        <section id="ourTestimonials" class="centerBloc">
+            <div class="mainContainer"></div>
+        </section>
     </main>
 
     <footer>
