--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>structure html</title>
     <meta name="description " content="Ma premiere page en html/css">
-    <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="assets/css/team.css">
 </head>
 
     <body>
