Page d'accueil avancée

--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,40 @@
     <main>
         <section id="carousel"></section>
 
-        <section id="aboutRestoral"></section>
+        <section id="aboutRestoral" class="centerBloc">
+            <div id="aboutContainer" class="flex">
+                <div id="aboutImg">
+                    <img src="assets/images/about-1.png" alt="" class="mainImg">
+                </div>
+                <div id="aboutText" class="centerBloc">
+                    <div id="textContainer">
+                        <div style="height: 40%;">
+                            <h2>About Restoral</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perferendis quas aperiam, harum eos minima ipsam ex ad doloribus recusandae quidem neque. Quas aliquam dignissimos odio, labore ipsum excepturi velit!</p>
+                        </div>
+                        <div style="height: 60%;">
+                            <div style="height: 40%; justify-content: space-around;" class="centerBloc">
+                                <div class="numbers">
+                                    <h2 style="color: #F9B129; font-size: 50px;">20</h2>
+                                    <p>BURGERS SOLD</p>
+                                </div>
+                                <div class="numbers">
+                                    <h2 style="color: #F9B129; font-size: 50px;">100</h2>
+                                    <p>PIZZAS MADE</p>
+                                </div>
+                                <div class="numbers">
+                                    <h2 style="color: #F9B129; font-size: 50px;">64</h2>
+                                    <p>CLIENTS EVERYDAY</p>
+                                </div>
+                            </div>
+                            <div style="height: 40%; margin-top: 70px;">
+                                <a href="" class="cta">SEE OUR MENU</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="valeurs" class="centerBloc">
             <div id="valeurContainer" class="mainContainer centerBloc">
@@ -133,7 +166,58 @@
         </section>
 
         <section id="ourTestimonials" class="centerBloc">
-            <div class="mainContainer"></div>
+            <div class="mainContainer">
+                <div id="testimonialsTitle" class="centerBloc">
+                    <h2>Our Testimonials</h2>
+                </div>
+                <div id="testimonialsTiles" class="flex">
+                    <div class="testimonialsTiles">
+                        <div class="tileImg centerBloc">
+                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
+                        </div>
+                        <div class="tileTitle centerBloc">
+                            <h3>The best Burgers in the Area</h3>
+                        </div>
+                        <div class="tileText centerBloc centerText">
+                            <p> Anytime I am driving through San Diego, I usually stop by Restoral. They have very delicious burgers and fries.</p>
+                        </div>
+                        <div class="tileDivider"></div>
+                        <div class="tileName centerBloc">
+                            <h4>By Emily Wilson</h4>
+                        </div>
+                    </div>
+                    <div class="testimonialsTiles">
+                        <div class="tileImg centerBloc">
+                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
+                        </div>
+                        <div class="tileTitle centerBloc">
+                            <h3>The best Burgers in the Area</h3>
+                        </div>
+                        <div class="tileText centerBloc centerText">
+                            <p> Anytime I am driving through San Diego, I usually stop by Restoral. They have very delicious burgers and fries.</p>
+                        </div>
+                        <div class="tileDivider"></div>
+                        <div class="tileName centerBloc">
+                            <h4>By Emily Wilson</h4>
+                        </div>
+                    </div>
+                    <div class="testimonialsTiles">
+                        <div class="tileImg centerBloc">
+                            <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
+                        </div>
+                        <div class="tileTitle centerBloc">
+                            <h3>The best Burgers in the Area</h3>
+                        </div>
+                        <div class="tileText centerBloc centerText">
+                            <p> Anytime I am driving through San Diego, I usually stop by Restoral. They have very delicious burgers and fries.</p>
+                        </div>
+                        <div class="tileDivider"></div>
+                        <div class="tileName centerBloc">
+                            <h4>By Emily Wilson</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
