--- a/blog.html
+++ b/blog.html
@@ -23,15 +23,19 @@
                  By <p> John Doe </p> 
                 <p class="texte1">2 days ago</p>
             </div>
+
             <div class="burgers1">
                 <h1>Burgers</h1>
                 <h2>Making Tasty Thanksgiving Turkey Burgers</h2>
-                <p> by John Doe   2 days ago</p>
+                By<p>John Doe</p>
+                <p class="texte2">4 days ago</p>
             </div>
+
             <div class="burgers2">
                 <h1>Burgers</h1>
                 <h2>The Best American Burgers</h2>
-                <p> by John Doe   2 days ago</p>
+                <p> by John Doe  
+                     5 days ago</p>
             </div>
             <div class="pizza">
                 <h1>Pizza</h1>
