--- a/team.html
+++ b/team.html
@@ -5,9 +5,9 @@
     <title>structure html</title>
     <meta name="description " content="Ma premiere page en html/css">
     <link rel="stylesheet" href="assets/css/Reset.css">
+    <link rel="stylesheet" href="assets/css/team.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/team.css">
 </head>
     
     <body>
@@ -58,7 +58,7 @@
                     <h3>under Robinson</h3>
                     <p>head chef</p>
                     <div class="petit">
-                        <img src="../assets/icons/instagram.svg" alt="">
+                        <img src="assets/icons/instagram.svg" alt="">
                         <img src="../assets/icons/instagram.svg" alt="">
                         <img src="../assets/icons/instagram.svg" alt="">
                         <img src="../assets/icons/instagram.svg" alt="">
