--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             <nav class="centerBloc">
                 <ul class="centerBloc">
                     <li><a href="" id="home">HOME</a></li>
-                    <li class="dot"><a href="">ABOUT US</a></li>
+                    <li class="dot"><a href="#aboutRestoral">ABOUT US</a></li>
                     <li class="dot"><a href="">MENU</a></li>
                     <li class="dot"><a href="">PAGES</a></li>
                     <li class="dot"><a href="">NEWS</a></li>
@@ -137,7 +137,18 @@
             <div class="mainContainer"></div>
         </section>
 
-        <section id="orderOnline"></section>
+        <section id="orderOnline">
+            <div id="orderBack" class="centerBloc">
+                <div id="order">
+                    <div id="orderTitle" class="centerBloc"><h3>Free Delivery</h3></div>
+                    <div id="orderSubtitle" class="centerBloc"><h2>PIZZA DAY</h2></div>
+                    <div id="orderPrice"></div>
+                    <div id="orderButton" class="centerBloc">
+                        <a href="" class="cta">ORDER ONLINE</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="ourChefs" class="centerBloc">
             <div class="mainContainer"></div>
