--- a/Index.html
+++ b/Index.html
@@ -75,8 +75,8 @@
         <section id="valeurs" class="centerBloc">
             <div id="valeurContainer" class="mainContainer centerBloc">
                 <div class="valeur">
-                    <div class="valeursIcon mainImg">
-                        <img src="" alt="">
+                    <div class="valeursIcon centerBloc">
+                        <img src="assets/images/Clock.svg" class="heightImg" alt="">
                     </div>
                     <div class="valeursTitle centerBloc">
                         <h3>FAST DELIVERY</h3>
@@ -89,52 +89,89 @@
                     </div>
                 </div>
                 <div class="valeur">
-                    <div class="valeursIcon mainImg">
-                        <img src="" alt="">
+                    <div class="valeursIcon centerBloc">
+                        <img src="assets/images/GroceryBag.svg" class="heightImg" alt="">
                     </div>
                     <div class="valeursTitle centerBloc">
-                        <h3>FAST DELIVERY</h3>
+                        <h3>FRESH FOOD</h3>
                     </div>
                     <div class="valeursBar flex">
                         <img src="assets/images/divider.svg" alt="" class="divider">
                     </div>
                     <div class="valeursText centerText">
-                        <p>Everything you order at Restoral will be quickly delivered to your door.</p>
+                        <p>We use only the best ingredients to cook the tasty fresh food for you.</p>
                     </div>
                 </div>
                 <div class="valeur">
-                    <div class="valeursIcon mainImg">
-                        <img src="" alt="">
+                    <div class="valeursIcon centerBloc">
+                        <img src="assets/images/ChefHat.svg" class="heightImg" alt="">
                     </div>
                     <div class="valeursTitle centerBloc">
-                        <h3>FAST DELIVERY</h3>
+                        <h3>EXPERIENCED CHEFS</h3>
                     </div>
                     <div class="valeursBar flex">
                         <img src="assets/images/divider.svg" alt="" class="divider">
                     </div>
                     <div class="valeursText centerText">
-                        <p>Everything you order at Restoral will be quickly delivered to your door.</p>
+                        <p>Our staff consist of chefs and cooks with years of experience.</p>
                     </div>
                 </div>
                 <div class="valeur">
-                    <div class="valeursIcon mainImg">
-                        <img src="" alt="">
+                    <div class="valeursIcon centerBloc">
+                        <img src="assets/images/Plate.svg" class="heightImg" alt="">
                     </div>
                     <div class="valeursTitle centerBloc">
-                        <h3>FAST DELIVERY</h3>
+                        <h3>A VARIETY OF DISHES</h3>
                     </div>
                     <div class="valeursBar flex">
                         <img src="assets/images/divider.svg" alt="" class="divider">
                     </div>
                     <div class="valeursText centerText">
-                        <p>Everything you order at Restoral will be quickly delivered to your door.</p>
+                        <p>In our menu you'll find a wide variety of dishes, desserts and drinks.</p>
                     </div>
                 </div>
             </div>
         </section>
 
         <section id="carte" class="centerBloc">
-            <div class="mainContainer"></div>
+            <div class="mainContainer centerBloc" id="carteContainer">
+                <section class="carteSection flexColumn">
+                    <div class="carteDiv">
+                        <h3>Tuna Salad -------------------------------------------- $25.00</h3>
+                        <p>Lettuce / Tomatoes / Tuna / Grain toast</p>
+                    </div>
+                    <div class="carteDiv">
+                        <h3>Chiken Pesto ------------------------------------------ $25.00</h3>
+                        <p>All-natural Chiken / Tomatoes / Arugula / Baguette</p>
+                    </div>
+                    <div class="carteDiv">
+                        <h3>Turkey Avocado -------------------------------------- $25.00</h3>
+                        <p>Smoked turkey breast / Bacon / Lettuce / Toast</p>
+                    </div>
+                    <div class="carteDiv">
+                        <h3>Tomato Mozarella ----------------------------------- $25.00</h3>
+                        <p>Roasted red peppers / Arugula / Basil / Baguette</p>
+                    </div>
+                </section>
+                <section class="carteSection flexColumn">
+                    <div class="carteDiv">
+                        <h3>Roast Beef & Cheddar ----------------------------- $25.00</h3>
+                        <p>Cheddar cheese / Lettuce / Roast beef / Sesame bread</p>
+                    </div>
+                    <div class="carteDiv">
+                        <h3>Manhattan -------------------------------------------- $25.00</h3>
+                        <p>Thinly sliced pastrami / Melted swiss cheese / Lettuce</p>
+                    </div>
+                    <div class="carteDiv">
+                        <h3>Summer Love ---------------------------------------- $25.00</h3>
+                        <p>Roasted turkey / Red pepper / Fresh avocado</p>
+                    </div>
+                    <div class="carteDiv">
+                        <h3>Chiken Ranch --------------------------------------- $25.00</h3>
+                        <p>Chicken breast / Melted cheese / Ranch dressing</p>
+                    </div>
+                </section>
+            </div>
         </section>
 
         <section id="orderOnline">
@@ -142,7 +179,16 @@
                 <div id="order">
                     <div id="orderTitle" class="centerBloc"><h3>Free Delivery</h3></div>
                     <div id="orderSubtitle" class="centerBloc"><h2>PIZZA DAY</h2></div>
-                    <div id="orderPrice"></div>
+                    <div id="orderPrice" class="centerBloc">
+                        <div id="left" class="flex">
+                            <p><sub>$</sub></p><h2>1</h2><p><sub>99</sub></p>
+                        </div>
+                        <div id="right">
+                            <p>Sandwich</p>
+                            <p>Salad</p>
+                            <p>Drink</p>
+                        </div>
+                    </div>
                     <div id="orderButton" class="centerBloc">
                         <a href="" class="cta">ORDER ONLINE</a>
                     </div>
@@ -151,7 +197,56 @@
         </section>
 
         <section id="ourChefs" class="centerBloc">
-            <div class="mainContainer"></div>
+            <div class="mainContainer">
+                <div id="chefsTitle" class="centerBloc"><h2>Our Chefs</h2></div>
+                <div id="chefsContainer" class="centerBloc">
+                    <section class="chefsSection">
+                        <div class="chefsPhoto centerBloc">
+                            <div class="photo centerBloc">
+                                <img src="assets/images/team-small-3-250x250.jpg" alt="" class="chefsImg">
+                            </div>
+                        </div>
+                        <div class="chefsName centerBloc"><h3>Orni Stark</h3></div>
+                        <div class="chefsTitle centerBloc"><p>Founder</p></div>
+                        <div class="chefsMedia centerBloc">
+                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="" class="mainImg"></a></div>
+                        </div>
+                    </section>
+                    <section class="chefsSection">
+                        <div class="chefsPhoto centerBloc">
+                            <div class="photo centerBloc">
+                                <img src="assets/images/team-small-3-250x250.jpg" alt="" class="chefsImg">
+                            </div>
+                        </div>
+                        <div class="chefsName centerBloc"><h3>Biltam Robinson</h3></div>
+                        <div class="chefsTitle centerBloc"><p>Head Chef</p></div>
+                        <div class="chefsMedia centerBloc">
+                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="" class="mainImg"></a></div>
+                        </div>
+                    </section>
+                    <section class="chefsSection">
+                        <div class="chefsPhoto centerBloc">
+                            <div class="photo centerBloc">
+                                <img src="assets/images/team-small-3-250x250.jpg" alt="" class="chefsImg">
+                            </div>
+                        </div>
+                        <div class="chefsName centerBloc"><h3>Rabina Ives</h3></div>
+                        <div class="chefsTitle centerBloc"><p>Pastry Chef</p></div>
+                        <div class="chefsMedia centerBloc">
+                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="" class="mainImg"></a></div>
+                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="" class="mainImg"></a></div>
+                        </div>
+                    </section>
+                </div>
+            </div>
         </section>
 
         <section id="ourPartners" class="centerBloc">
@@ -202,14 +297,14 @@
                             <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
                         </div>
                         <div class="tileTitle centerBloc">
-                            <h3>The best Burgers in the Area</h3>
+                            <h3>There are Burgers for Vegetarians</h3>
                         </div>
                         <div class="tileText centerBloc centerText">
-                            <p> Anytime I am driving through San Diego, I usually stop by Restoral. They have very delicious burgers and fries.</p>
+                            <p>What i like the most about this restaurant is that they have tasty things both for vegetarians and vegans. all their dishes and snacks are delicious!</p>
                         </div>
                         <div class="tileDivider"></div>
                         <div class="tileName centerBloc">
-                            <h4>By Emily Wilson</h4>
+                            <h4>By Ann Carison</h4>
                         </div>
                     </div>
                     <div class="testimonialsTiles">
@@ -217,14 +312,14 @@
                             <div><img class="tileImgContain" src="assets/images/testimonials-01-104x104.jpg" alt="" class="mainImg"></div>
                         </div>
                         <div class="tileTitle centerBloc">
-                            <h3>The best Burgers in the Area</h3>
+                            <h3>Your French Fries are the Best!</h3>
                         </div>
                         <div class="tileText centerBloc centerText">
-                            <p> Anytime I am driving through San Diego, I usually stop by Restoral. They have very delicious burgers and fries.</p>
+                            <p>Restoral is my favourite burger joint. They grind their beef fresh everyday - and their frenche fries ar homemade. I have not been disappointed yet.</p>
                         </div>
                         <div class="tileDivider"></div>
                         <div class="tileName centerBloc">
-                            <h4>By Emily Wilson</h4>
+                            <h4>By John Smith</h4>
                         </div>
                     </div>
                 </div>
