Page Toasts Finie

--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,7 @@
                                 </div>
                             </div>
                             <div style="height: 40%; margin-top: 70px;">
-                                <a href="" class="cta">SEE OUR MENU</a>
+                                <a href="Toast.html" class="cta">SEE OUR MENU</a>
                             </div>
                         </div>
                     </div>
