--- a/Toast.html
+++ b/Toast.html
@@ -155,10 +155,10 @@
                             <h2>FOLLOW US</h2>
                         </div>
                         <div id="followMedia" class="centerBloc">
-                            <div class="media"><a href=""><img src="assets/images/instagramJ.svg" alt="Instagram" class="footerImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/facebookJ.svg" alt="Facebook" class="footerImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/twitterJ.svg" alt="Twitter" class="footerImg"></a></div>
-                            <div class="media"><a href=""><img src="assets/images/googleJ.svg" alt="Google+" class="footerImg"></a></div>
+                            <div class="mediaa"><a href=""><img src="assets/images/instagram.svg" alt="Instagram" class="footerImg"></a></div>
+                            <div class="mediaa"><a href=""><img src="assets/images/facebook.svg" alt="Facebook" class="footerImg"></a></div>
+                            <div class="mediaa"><a href=""><img src="assets/images/twitter.svg" alt="Twitter" class="footerImg"></a></div>
+                            <div class="mediaa"><a href=""><img src="assets/images/google.svg" alt="Google+" class="footerImg"></a></div>
                         </div>
                     </div>
                 </section>
