centré les lignes de la banniere

--- a/blog.html
+++ b/blog.html
@@ -37,9 +37,14 @@
     <main>
         <section class="flex">
             <div class="rectangle">
-                <h1 class="homei">Grid Blog</h1>
-                <p class="home">Home News Grid Blog</p>
+                <h2 class="homei">Grid Blog</h2>
+                <div class="homeii">
+                <p>Home</p>
+                <p>News</p>
+                <div class="homeiii"></div>
+                <h3>Grid Blog</h4>
             </div>
+          
         </section>
 
         <div id="bloc">
